# communication

./: .bazelrc  MODULE.bazel  buildipc.sh  buildipclong.sh  buildsimple.sh  cdexternal.sh  fetch-logs.sh  fix_rust_editions.sh  getinfo.sh
local-score-crates/: BUILD  MODULE.bazel  README.md  update_BUILD_file.sh
local-score-crates/patches/: BUILD  iceoryx2_bb_derive_macros_readme.patch  qnx8_iceoryx2.patch
patches/: fix_hard_coded_amd64.patch
score/mw/com/example/com-api-example/: BUILD
score/mw/com/example/com-api-example/com-api-gen/: BUILD
score/mw/com/example/ipc_bridge/: BUILD  ipc_bridge.rs  ipc_bridge_rs_wrapper.cc
score/mw/com/impl/plumbing/rust/: BUILD
score/mw/com/impl/plumbing/rust/test_support/: BUILD
score/mw/com/impl/rust/: BUILD
score/mw/com/impl/rust/com-api/com-api/: BUILD
score/mw/com/impl/rust/com-api/com-api-concept/: BUILD
score/mw/com/impl/rust/com-api/com-api-concept-macros/: BUILD
score/mw/com/impl/rust/com-api/com-api-ffi-lola/: BUILD
score/mw/com/impl/rust/com-api/com-api-runtime-lola/: BUILD
score/mw/com/impl/rust/com-api/com-api-runtime-mock/: BUILD
score/mw/com/impl/rust/test/: BUILD
score/mw/com/test/bigdata/: BUILD
simple_rs/: BUILD  print_datetime.rs  print_datetime_wrapper.cc
